--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -5,7 +5,8 @@
         <section>
             <div class="text-center">
                         <h1 class="display-4" style="font-family: 'Berkshire Swash';">Leave a Review</h1>
-                <form action="/addReview" method="POST" id="reviewForm">
+                <br>
+                        <form action="/addReview" method="POST" id="reviewForm">
                     <div class="form-rows">
                         <div class="labels">
                             <label for="sName">What is your name?</label>
@@ -55,7 +56,7 @@
                         </div>
                         <br>
                         <div class="labels">
-                            <label for="sReview">Please leave your review: (up to 250 characters)</label>
+                            <label for="sReview">Please leave your review: <br> (up to 250 characters)</label>
                         </div>
                         <div class="fields">
                             <input type="text" maxlength="250">
