--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -59,7 +59,7 @@
                             <label for="sReview">Please leave your review: <br> (up to 250 characters)</label>
                         </div>
                         <div class="fields">
-                            <input type="text" maxlength="250">
+                            <input type="text" maxlength="250" id="sReview" name="sReview">
                         </div>
                     </div>
                 </form>
