--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -51,8 +51,7 @@
                                 <span class='r r4' data-rating='4' data-value='4'></span>
                                 <span class='r r4_5' data-rating='45' data-value='4.5'></span>
                                 <span class='r r5' data-rating='5' data-value='5'></span>
-                              </span>
-                            
+                            </span>
                         </div>
                         <br>
                         <div class="labels">
@@ -63,6 +62,12 @@
                         </div>
                     </div>
                 </form>
+                <br>
+                <br>
+                <button type="submit" class="button">Submit Review</button>
+                <br>
+                <br>
+                <br>
             </div>
         </section>
         <!-- Section 2-->
