--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -19,7 +19,7 @@
                             <label for="sProduct">What product did you purchase?</label>
                         </div>
                         <div class="fields">
-                            <select id="sProduct" name="sProduct" class="dropdowncustom" required>
+                            <select id="sProduct" name="sProduct" class="dropdowncustom" style="width: 250px; margin-top: 19px;" required>
                                 <option value="" disabled selected> -- Choose a product --</option>
                                 <option value="BabyBoots">Baby Boot</option>
                                 <option value="Baby Quilt">Baby Quilt</option>
