comment on starts

--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -33,7 +33,7 @@
                             <label for="iRating">How would you rate this product?</label>
                         </div>
                         <div class="fields">
-                            <!--Stars?-->
+                            <!--Stars? Doesn't work yet-->
                             <span class="rating_stars rating_0">
                                 <span class='s' data-low='0.5' data-high='1'><i class="fa fa-star-o"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star"></i></span>
                                 <span class='s' data-low='1.5' data-high='2'><i class="fa fa-star-o"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star"></i></span>
