--- a/views/product.ejs
+++ b/views/product.ejs
@@ -4,7 +4,7 @@
     <div class="container-custom">
         <div class="left-column-custom">
             <img
-                src="<%=productData[0].img_path%>"
+                src="/assets/img/babyboots.jpg"
                 style="padding-right: 1rem"
                 class="active"
                 alt="product"
@@ -13,6 +13,7 @@
         <div class="right-column-custom">
             <div class="product-description">
                 <span>Hand-made</span>
+                <h1><%= productData[0].img_path %></h1>
                 <h1><%= productData[0].product_name %></h1>
                 <p><%= productData[0].product_desc %></p>
             </div>
