--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -59,7 +59,8 @@
                             <label for="sReview">Please leave your review: <br> (up to 250 characters)</label>
                         </div>
                         <div class="fields">
-                            <input type="text" maxlength="250" id="sReview" name="sReview">
+                            <textarea type="text" maxlength="250" id="sReview" name="sReview" class="customText" rows="4" cols="50">
+                            </textarea>
                         </div>
                     </div>
                 </form>
