--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="col mb-5">
-                <a href="product/1">
+                <a href="product/1" style="text-decoration:none">
                     <div class="card h-100" id="1" name="1">
                         <!-- Product image-->
                         <img
