--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
         <div
             class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
         >
+        <% for (let iCount = 0; iCount < reviewData.length; iCount++){%>
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
@@ -18,11 +19,12 @@
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Zipper Scrunchies</h5>
+                            <h5 class="fw-bolder"><%= reviewData[iCount].product_name %></h5>
                         </div>
                     </div>
                 </div>
             </div>
+        <%}%>
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
