--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                     <!-- Product image-->
                     <img
                         class="card-img-top"
-                        src="/assets/img/zipper_scrunchies.jpg"
+                        src="<%= reviewData[iCount].image_path%>"
                         alt="..."
                     />
                     <!-- Product details-->
@@ -25,142 +25,6 @@
                 </div>
             </div>
         <%}%>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Product image-->
-                    <img
-                        class="card-img-top"
-                        src="/assets/img/BabyQuiltH.jpg"
-                        alt="..."
-                    />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">Baby Quilts</h5>
-                            <!-- Product reviews-->
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Product image-->
-                    <img
-                        class="card-img-top"
-                        src="/assets/img/normalscrunchies.jpg"
-                        alt="..."
-                    />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">Normal Scrunchies</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <a href="product/1" style="text-decoration:none">
-                    <div class="card h-100" id="1" name="1">
-                        <!-- Product image-->
-                        <img
-                            class="card-img-top"
-                            src="/assets/img/babyboots.jpg"
-                            alt="..."
-                        />
-                        <!-- Product details-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">Baby Boots</h5>
-                                <!-- Product reviews-->
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Product image-->
-                    <img
-                        class="card-img-top"
-                        src="/assets/img/book_cozy.jpg"
-                        alt="..."
-                    />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">Book Cozy</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Product image-->
-                    <img
-                        class="card-img-top"
-                        src="/assets/img/4x3 Logo.png"
-                        alt="..."
-                    />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">Product Coming Soon!</h5>
-                        </div>
-                    </div>
-                    <!-- Product actions-->
-                    <div
-                        class="card-footer p-4 pt-0 border-top-0 bg-transparent"
-                    >
-                        <div class="text-center"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Sale badge-->
-                    <!-- Product image-->
-                    <img
-                        class="card-img-top"
-                        src="/assets/img/4x3 Logo.png"
-                        alt="..."
-                    />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">Product Coming Soon!</h5>
-                        </div>
-                    </div>
-                    <!-- Product actions-->
-                    <div
-                        class="card-footer p-4 pt-0 border-top-0 bg-transparent"
-                    >
-                        <div class="text-center"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Product image-->
-                    <img
-                        class="card-img-top"
-                        src="/assets/img/4x3 Logo.png"
-                        alt="..."
-                    />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">Product Coming Soon!</h5>
-                            <!-- Product reviews-->
-                        </div>
-                    </div>
                     <!-- Product actions-->
                     <div
                         class="card-footer p-4 pt-0 border-top-0 bg-transparent"
