--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -2,7 +2,7 @@
         <footer class="py-5 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-white">
-                    Copyright &copy; A Little Bit of Grandma 2023
+                    Copyright &copy; A Little Bit of Grandma <%= reviewData[0].year %>
                 </p>
             </div>
         </footer>
