--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,23 +7,25 @@
             class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
         >
         <% for (let iCount = 0; iCount < reviewData.length; iCount++){%>
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Product image-->
-                    <img
-                        class="card-img-top"
-                        src="<%= reviewData[iCount].image_path%>"
-                        alt="..."
-                    />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder"><%= reviewData[iCount].product_name %></h5>
+            <a href="product/<%=reviewData[iCount].product_id%>">
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Product image-->
+                        <img
+                            class="card-img-top"
+                            src="<%= reviewData[iCount].img_path%>"
+                            alt="..."
+                        />
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <h5 class="fw-bolder"><%= reviewData[iCount].product_name %></h5>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </a>
         <%}%>
                     <!-- Product actions-->
                     <div
