--- a/views/Head.ejs
+++ b/views/Head.ejs
@@ -22,5 +22,10 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Berkshire Swash"
         />
+        <link 
+            rel="stylesheet" 
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
+            integrity="sha384-ezmkv45EFWozjYUUGX5X5iP13Ko2Y+q8E+L6ILiz7tQV0Q3ZVJc7ksRNBq7SLHUP" 
+            crossorigin="anonymous" />
     </head>
 </html>
