--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,8 +1,7 @@
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
+        <footer class="py-5 bg-dark" onload="getDate();">
             <div class="container">
-                <p class="m-0 text-center text-white">
-                    Copyright &copy; A Little Bit of Grandma <%= reviewData[0].year %>
+                <p class="m-0 text-center text-white" id="copyright">
                 </p>
             </div>
         </footer>
@@ -10,5 +9,11 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script>
+            function getDate(){
+                let sDate = new Date().getFullYear()
+                document.getElementById("copyright").innerHTML =  "Copyright &copy; A Little Bit of Grandma " + sDate; 
+            }
+        </script>
     </body>
 </html>
