--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -11,7 +11,7 @@
         <script src="js/scripts.js"></script>
         <script>
             function getDate(){
-                let sDate = new Date().getFullYear()
+                let sDate = new Date().getFullYear();
                 document.getElementById("copyright").innerHTML =  "Copyright &copy; A Little Bit of Grandma " + sDate; 
             }
         </script>
