--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
             class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
         >
         <% for (let iCount = 0; iCount < reviewData.length; iCount++){%>
+            <% if (reviewData[iCount].product_name){%>
             <a href="product/<%=reviewData[iCount].product_id%>">
                 <div class="col mb-5">
                     <div class="card h-100">
@@ -26,7 +27,7 @@
                     </div>
                 </div>
             </a>
-        <%}%>
+        <%}}%>
                     <!-- Product actions-->
                     <div
                         class="card-footer p-4 pt-0 border-top-0 bg-transparent"
