--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,5 +1,5 @@
         <!-- Footer-->
-        <footer class="py-5 bg-dark" onload="getDate();">
+        <footer class="py-5 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-white" id="copyright">
                 </p>
@@ -15,5 +15,5 @@
                 document.getElementById("copyright").innerHTML =  "Copyright &copy; A Little Bit of Grandma " + sDate; 
             }
         </script>
-    </body>
+    </body onload="getDate();">
 </html>
