add id to product

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -2,6 +2,9 @@
 <!-- Section-->
 <body class="bg-gradient-primary">
     <div class="container-custom">
+        <p id="p_id" name="p_id" style="display: none">
+            <%=productData[0].product_id%>
+        </p>
         <div class="left-column-custom">
             <img
                 src="<%= productData[0].img_path %>"
