--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10929,65 +10929,55 @@ textarea.form-control-lg {
 .fields {
   display: inline-block;
   text-align: left;
-  width: 40%;
+  width: 50%;
   vertical-align: top;
 }
 .labels {
   display: inline-block;
   text-align: right;
-  width: 50%;
+  width: 40%;
   padding: 5px;
   vertical-align: top;
   margin-top: 10px;
 }
 
 
-
-.rating_stars {
-    margin-top: 15px;
-    display: inline-block;
-    font-size: 20px;
-    font-weight: 200;
-    color: #918f8f;
-    position: relative;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.rating_stars span .fa, .rating_stars span.active-low .fa-star-o, .rating_stars span.active-high .fa-star-o{
-	display: none;
+.rate {
+  float: left;
+  height: 46px;
+  padding: 0 10px;
 }
-
-.rating_stars span .fa-star-o{
-	display: inline-block;
+.rate:not(:checked) > input {
+  position:absolute;
+  top:-9999px;
 }
-
-.rating_stars span.s.active-high .fa-star{
-	display: inline-block; color: #feb645;
+.rate:not(:checked) > label {
+  float:right;
+  width:1em;
+  overflow:hidden;
+  white-space:nowrap;
+  cursor:pointer;
+  font-size:30px;
+  color:#ccc;
 }
-
-.rating_stars span.s.active-low .fa-star-half-o{
-	display: inline-block; color: #feb645;
+.rate:not(:checked) > label:before {
+  content: '★ ';
 }
-
-.rating_stars span.r {
-	position: absolute;
-	top: 0;
-	height: 20px;
-	width: 10px;
-	left: 0;
+.rate > input:checked ~ label {
+  color: #ffc700;    
 }
-
-.rating_stars span.r.r0_5 {left:0px;}
-.rating_stars span.r.r1 {left:10px; width: 11px;}
-.rating_stars span.r.r1_5 {left:21px; width: 13px;}
-.rating_stars span.r.r2 {left:34px; width: 12px;}
-.rating_stars span.r.r2_5 {left:46px; width: 12px;}
-.rating_stars span.r.r3 {left:58px; width: 11px;}
-.rating_stars span.r.r3_5 {left:69px; width: 12px;}
-.rating_stars span.r.r4 {left:81px; width: 12px;}
-.rating_stars span.r.r4_5 {left:93px; width: 12px;}
-.rating_stars span.r.r5 {left:105px; width: 12px;}
-
-label {width: 300px;display: inline-block; text-align: right; margin-right: 100px;}
-input {width: 250px; text-align: left; margin-left: 0px; margin-top: 20px;}
-.values {margin-top: 20px;}
-.info {max-width: 500px; margin: 20px auto;}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+  color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+  color: #c59b08;
+}
