--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -45,6 +45,8 @@
                             </textarea>
                         </div>
                     </div>
+                    <br>
+                    <button type="submit" class="button">Submit</button>
                 </form>
                 <br>
                 <br>
