--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         >
         <% for (let iCount = 0; iCount < reviewData.length; iCount++){%>
             <% if (reviewData[iCount].product_name){%>
-            <a style="text-decoration: none;" href="product/<%=reviewData[iCount].product_id%>">
+            <a style="text-decoration: none; color: black;" href="product/<%=reviewData[iCount].product_id%>">
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
