--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -15,5 +15,5 @@
                 document.getElementById("copyright").innerHTML =  "Copyright &copy; A Little Bit of Grandma " + sDate; 
             }
         </script>
-    </body onload="getDate();">
+    </body>
 </html>
