--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <br>
-                    <button type="submit" class="button">Submit</button>
+                    <button type="submit" class="button">Submit Review</button>
                 </form>
                 <br>
                 <br>
