--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -19,7 +19,7 @@
                     </div>
                     <div class="form-rows">
                         <div class="labels">
-                            <label for="sName">Rate the Product</label>
+                            <label for="sName" style="margin-top: 12px">Rate the Product:</label>
                         </div>
                         <div class="fields">
                             <div class="rate">
@@ -46,9 +46,9 @@
                         </div>
                     </div>
                     <br>
+                    <br>
                     <button type="submit" class="button">Submit Review</button>
                 </form>
-                <br>
                 <br>
                 <br>
             </div>
