--- a/views/Head.ejs
+++ b/views/Head.ejs
@@ -10,7 +10,11 @@
         <meta name="author" content="" />
         <title>A Little Bit of Grandma</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="spool-of-thread.png" />
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="/assets/img/spool-of-thread.png"
+        />
         <!-- Bootstrap icons-->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
@@ -22,10 +26,11 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Berkshire Swash"
         />
-        <link 
-            rel="stylesheet" 
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
-            integrity="sha384-ezmkv45EFWozjYUUGX5X5iP13Ko2Y+q8E+L6ILiz7tQV0Q3ZVJc7ksRNBq7SLHUP" 
-            crossorigin="anonymous" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha384-ezmkv45EFWozjYUUGX5X5iP13Ko2Y+q8E+L6ILiz7tQV0Q3ZVJc7ksRNBq7SLHUP"
+            crossorigin="anonymous"
+        />
     </head>
 </html>
