--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -3,6 +3,7 @@
 <br />
 <section>
     <div class="text-center">
+        <p id="p_id" style="display: none"><%=prod_id%></p>
         <h1 class="display-4" style="font-family: 'Berkshire Swash'">
             Leave a Review
         </h1>
