--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -41,7 +41,7 @@
                             <label for="sReview">Please leave your review: <br> (up to 250 characters)</label>
                         </div>
                         <div class="fields">
-                            <textarea type="text" maxlength="250" id="sReview" name="sReview" class="customText" rows="4" cols="50">
+                            <textarea type="text" maxlength="250" id="sReview" name="sReview" class="customText" rows="4" cols="50" required>
                             </textarea>
                         </div>
                     </div>
