removing white space

--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -62,8 +62,7 @@
                         class="customText"
                         rows="4"
                         cols="50"
-                    >
-                    </textarea>
+                    ></textarea>
                 </div>
             </div>
             <br />
