--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
         <div
             class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
         >
-        <% for (let iCount = 1; iCount < reviewData.length; iCount++){%>
+        <% for (let iCount = 1; iCount < reviewData.length+1; iCount++){%>
             <% if (reviewData[iCount].product_name != ""){%>
             <a style="text-decoration: none; color: black;" href="product/<%=reviewData[iCount].product_id%>">
                 <div class="col mb-5">
