--- a/views/Head.ejs
+++ b/views/Head.ejs
@@ -13,7 +13,7 @@
         <link
             rel="icon"
             type="image/x-icon"
-            href="/assets/spool-of-thread.png"
+            href="../public/assets/spool-of-thread.png"
         />
         <!-- Bootstrap icons-->
         <link
