--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -2,6 +2,7 @@
         <footer class="py-5 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-white" id="copyright">
+                    Copyright &Copy A Little Bit of Grandma <%=  %>
                 </p>
             </div>
         </footer>
