--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -2,7 +2,7 @@
         <footer class="py-5 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-white" id="copyright">
-                    Copyright &Copy A Little Bit of Grandma <%=  %>
+                    Copyright &Copy A Little Bit of Grandma <%= date[0] %>
                 </p>
             </div>
         </footer>
