--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -2,7 +2,6 @@
         <footer class="py-5 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-white" id="copyright">
-                    Copyright &Copy A Little Bit of Grandma <%= date[0] %>
                 </p>
             </div>
         </footer>
@@ -10,5 +9,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script>
+            function getDate()
+            {
+                let sYear = new Date().getFullYear();
+                document.getElementById("copyright").innerHTML = "Copyright &copy; A Little Bit of Grandma " + sYear + "."
+            }
+        </script>
     </body>
 </html>
