--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10919,6 +10919,14 @@ textarea.form-control-lg {
 }
 
 
+.box {
+  width: 200px;
+  height: 200px;
+  background-color: #f0f0f0;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+
 .customText {
   height: 100px;
   margin-top: 8px;
