--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         >
         <% for (let iCount = 0; iCount < reviewData.length; iCount++){%>
             <a style="text-decoration: none; color: black;" href="product/<%=reviewData[iCount].product_id%>">
-                <div class="col mb-5">
+                <div class="col mb-5 box" id="myBox">
                     <div class="card h-100">
                         <!-- Product image-->
                         <img
@@ -38,5 +38,16 @@
         </div>
     </div>
 </section>
+<script>
+    const myBox = document.getElementById('myBox');
+
+myBox.addEventListener('mouseover', () => {
+  myBox.style.boxShadow = '0 0 10px rgba(0, 0, 0, 0.3)';
+});
+
+myBox.addEventListener('mouseout', () => {
+  myBox.style.boxShadow = 'none';
+});
+</script>
 
 <%- include('Footer') %>
