--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,12 +32,12 @@
                                                 method="post">
                                                 <div>
                                                     <input type="email" class="form-control form-control-user"
-                                                        id="exampleInputEmail" aria-describedby="emailHelp"
+                                                        id="useremail" aria-describedby="emailHelp"
                                                         placeholder="Enter Email Address...">
                                                         <br>
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="password" class="form-control form-control-user"
+                                                    <input type="userpassword" class="form-control form-control-user"
                                                         id="exampleInputPassword" placeholder="Password">
                                                 </div>
                                                 <br>
