--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,8 +37,8 @@
                                                         <br>
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="userpassword" class="form-control form-control-user"
-                                                        id="exampleInputPassword" placeholder="Password">
+                                                    <input type="password" class="form-control form-control-user"
+                                                        id="userpassword" placeholder="Password">
                                                 </div>
                                                 <br>
                                                 <div style="text-align: center;">
