--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,19 +32,19 @@
                                                 method="post">
                                                 <div>
                                                     <input type="email" class="form-control form-control-user"
-                                                        id="useremail" aria-describedby="emailHelp"
+                                                        id="useremail" name="useremail" aria-describedby="emailHelp"
                                                         placeholder="Enter Email Address...">
                                                         <br>
                                                 </div>
                                                 <div class="form-group">
                                                     <input type="password" class="form-control form-control-user"
-                                                        id="userpassword" placeholder="Password">
+                                                        id="userpassword" name="userpassword" placeholder="Password">
                                                 </div>
                                                 <br>
                                                 <div style="text-align: center;">
-                                                <a href="index.html" class="button" style="width:250px">
+                                                <button type="submit" style="width:250px">
                                                     Login
-                                                </a>
+                                                </button>
                                                 </div>
                                             </form>
                                             <hr>
