--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
                                                 </div>
                                                 <br>
                                                 <div style="text-align: center;">
-                                                <button type="submit" style="width:250px">
+                                                <button type="submit" style="width:250px" class="button">
                                                     Login
                                                 </button>
                                                 </div>
