--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,12 +1,12 @@
 <%- include('Head') %> <%- include('Navigation') %> <%- include('Header') %>
 <!-- Section-->
 <body class="bg-gradient-primary">
-    <div class="container-custom">
+    <div style="margin: 10px" class="container-custom">
         <div class="left-column-custom">
             <img
                 src="<%= productData[0].img_path %>"
-                style="padding-right: 1rem"
                 class="active"
+                style="padding-right: 10px"
                 alt="product"
             />
         </div>
