--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,23 +1,25 @@
 <%- include('Head') %> <%- include('Navigation') %> <%- include('Header') %>
 <!-- Section-->
 <body class="bg-gradient-primary">
-    <div style="margin: 10px" class="container-custom">
+    <div style="margin: 100px" class="container-custom">
         <div class="left-column-custom">
             <img
                 src="<%= productData[0].img_path %>"
                 class="active"
-                style="padding-right: 10px"
+                style="padding-right: 50px"
                 alt="product"
             />
         </div>
-        <div class="right-column-custom">
+        <div class="right-column-custom" style="padding-top: 0px">
             <div class="product-description">
-                <span>Hand-made</span>
+                <h3>Hand-made</h3>
                 <h1><%= productData[0].product_name %></h1>
                 <p><%= productData[0].product_desc %></p>
             </div>
             <div class="product-price">
-                <span>$<%= productData[0].product_price %></span>
+                <span style="font-size: 75px"
+                    >$<%= productData[0].product_price %></span
+                >
                 <br /><br />
                 <a href="leaveReview/<%=productData[0].product_id%>">
                     <button class="button" type="button">Leave a Review</button>
