--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -24,6 +24,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
+                <li class="nav-item">
+                    <a
+                        class="nav-link"
+                        aria-current="page"
+                        href="/allReviews"
+                        >All Reviews</a
+                    >
+                </li>
             </ul>
             <!--Teachers pay teachers site-->
             <a href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
