--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10924,7 +10924,7 @@ textarea.form-control-lg {
   transition: box-shadow 0.3s ease-in-out;
 }
 
-.myBox:hover {
+.box:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
