--- a/views/product.ejs
+++ b/views/product.ejs
@@ -2,11 +2,11 @@
 <!-- Section-->
 <body class="bg-gradient-primary">
     <div style="margin: 100px" class="container-custom">
-        <div class="left-column-custom">
+        <div class="left-column-custom" style="padding-right: 50px">
             <img
                 src="<%= productData[0].img_path %>"
                 class="active"
-                style="padding-right: 50px"
+                style="border-radius: 10px"
                 alt="product"
             />
         </div>
