--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10920,7 +10920,7 @@ textarea.form-control-lg {
 
 
 .box {
-  background-color: #f0f0f0;
+  background-color: #fff;
   transition: box-shadow 0.3s ease-in-out;
 }
 
