--- a/views/product.ejs
+++ b/views/product.ejs
@@ -18,7 +18,7 @@
             </div>
             <div class="product-price">
                 <span style="font-size: 75px"
-                    >$<%= productData[0].product_price %></span
+                    >$<%= productData[0].product_price %>.00</span
                 >
                 <br /><br />
                 <a href="leaveReview/<%=productData[0].product_id%>">
@@ -27,5 +27,6 @@
             </div>
         </div>
     </div>
+    <div class="container-custom"></div>
 </body>
 <%- include('Footer') %>
