--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -1,6 +1,7 @@
 <%- include('Head') %> <%- include('Header') %>
 
 <section onload="gatherLog();">
+    <p id="logged_in" style="display: none;"><%= reviewData[0].logged_in %></p>
 <script>
     // Wait for 1000 milliseconds (1 second) before redirecting
     setTimeout(function() {
@@ -9,7 +10,7 @@
 
     function gatherLog()
     {
-        localStorage.setItem(loggedIn, logged_in)
+        localStorage.setItem(loggedIn, document.getElementById("logged_in").innerHTML);
     }
 </script>
 </section>
