--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         >
         <% for (let iCount = 0; iCount < reviewData.length; iCount++){%>
             <div class="col mb-5">
-                <a style="text-decoration: none; color: black;" href="product/<%=reviewData[iCount].product_id%>"></a>
+                <a style="text-decoration: none; color: black;" href="product/<%=reviewData[iCount].product_id%>">
                     <div class="card h-100 box" id="myBox">
                         <!-- Product image-->
                         <img
