--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -1,6 +1,9 @@
 <%- include('Head') %> <%- include('Header') %>
 
 <section onload="gatherLog();">
+    <h1>
+        Successfully Logged In
+      </h1>
     <p id="logged_in" style="display: none;"><%= reviewData[0].logged_in %></p>
 <script>
     // Wait for 1000 milliseconds (1 second) before redirecting
