--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -1,6 +1,6 @@
 <%- include('Head') %> <%- include('Header') %>
 
-<section onload="gatherLog();">
+<section>
     <br><br>
     <h1 style="justify-content: center;">
         Successfully Logged In
@@ -9,12 +9,9 @@
 <script>
     // Wait for 1000 milliseconds (1 second) before redirecting
     setTimeout(function() {
+      localStorage.setItem(loggedIn, document.getElementById("logged_in").innerHTML);
       location.href = "https://craftwebsite.is404.net";
     }, 1000);
 
-    function gatherLog()
-    {
-        localStorage.setItem(loggedIn, document.getElementById("logged_in").innerHTML);
-    }
 </script>
 </section>
