--- a/views/errorPage.ejs
+++ b/views/errorPage.ejs
@@ -1,9 +1,10 @@
 <%- include('Head') %> <%- include('Header') %>
 
-    <h1>
+    <br><br>
+    <h1 style="justify-content: center;">
       Woops! <br>Something went wrong :(
     </h1>
-    <h2>
+    <h2 style="justify-content: center;">
      Have you tried turning it off and on again?
     </h2>
 
