--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -1,9 +1,9 @@
 <%- include('Head') %> <%- include('Header') %>
 
-<section>
+<body>
     <br><br>
     <h1 style="justify-content: center;">
-        Successfully Logged In
+        Success
     </h1>
     <p id="logged_in" style="display: none;"><%= reviewData[0].logged_in %></p>
 <script>
@@ -14,4 +14,5 @@
     }, 1000);
 
 </script>
-</section>
+</body>
+</html>
