--- a/views/errorPage.ejs
+++ b/views/errorPage.ejs
@@ -1,9 +1,9 @@
 <%- include('Head') %> <%- include('Header') %>
     <br><br>
-    <h1 style="justify-content: center;">
+    <h1 style="text-align: center;">
       Woops! <br>Something went wrong :(
     </h1>
-    <h2 style="justify-content: center;">
+    <h2 style="text-align: center;">
      Have you tried turning it off and on again?
     </h2>
 
