--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -2,7 +2,7 @@
 
 <body>
     <br><br>
-    <h1 style="justify-content: center;">
+    <h1 style="text-align: center;">
         Success
     </h1>
     <p id="logged_in" style="display: none;"><%= reviewData[0].logged_in %></p>
