--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -1,6 +1,6 @@
 <%- include('Head') %> <%- include('Header') %>
 
-<body>
+<body onload="getData();">
     <br><br>
     <h1 style="text-align: center;">
         Success
@@ -9,9 +9,13 @@
 <script>
     // Wait for 1000 milliseconds (1 second) before redirecting
     setTimeout(function() {
-      localStorage.setItem(loggedIn, document.getElementById("logged_in").innerHTML);
       location.href = "https://craftwebsite.is404.net";
     }, 1000);
+
+    function getData()
+    {
+        localStorage.setItem('loggedIn', document.getElementById("logged_in").innerHTML)
+    }
 
 </script>
 </body>
