--- a/views/allReviews.ejs
+++ b/views/allReviews.ejs
@@ -23,7 +23,7 @@
                         <td><%=reviewData[iCount].rating%></td>
                         <td><%=reviewData[iCount].product_id%></td>
                         <td>
-                            <!-- You can add buttons or links for actions like editing or deleting the review -->
+                            <!-- Edit and delete -->
                             <form action="/edit/<%= reviewData[iCount].review_id %>" method="GET">
                                 <input type="hidden" name="reviewID" value="<%=reviewData[iCount].review_id%>">
                                 <button type="submit" class="btn btn-primary">Edit</button>
