--- a/views/allReviews.ejs
+++ b/views/allReviews.ejs
@@ -30,7 +30,7 @@
                             </form>
                             <form action="/delete/<%= reviewData[iCount].review_id %>" method="POST">
                                 <input type="hidden" name="reviewID" value="<%=reviewData[iCount].review_id%>">
-                                <button type="submit" class="btn btn-danger">Delete</button>
+                                <button type="submit" class="btn btn-primary">Delete</button>
                             </form>
                         </td>
                     </tr>
