--- a/views/allReviews.ejs
+++ b/views/allReviews.ejs
@@ -25,11 +25,11 @@
                         <td>
                             <!-- Edit and delete -->
                             <form action="/edit/<%= reviewData[iCount].review_id %>" method="GET">
-                                <input type="hidden" name="reviewID <%= reviewData[iCount].review_id %>" value="<%=reviewData[iCount].review_id%>">
+                                <input type="hidden" name="reviewID" value="<%=reviewData[iCount].review_id%>">
                                 <button type="submit" class="btn btn-primary">Edit</button>
                             </form>
-                            <form action="/delete" method="POST">
-                                <input type="hidden" name="reviewID <%= reviewData[iCount].review_id %>" value="<%=reviewData[iCount].review_id%>">
+                            <form action="/delete/<%= reviewData[iCount].review_id %>" method="POST">
+                                <input type="hidden" name="reviewID" value="<%=reviewData[iCount].review_id%>">
                                 <button type="submit" class="btn btn-primary">Delete</button>
                             </form>
                         </td>
