--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,13 +6,16 @@
         <form action="/editReview" method="POST">
             <fieldset style="width: 0px;">
               <legend>Edit a Country:</legend>
-              <input type="hidden" id="review_id" name="review_id" value="<%=reviewData[0].review_id %>">
+              <input type="hidden" id="review_id" name="review_id" required
+              value="<%=reviewData[0].review_id %>">
               <label for="reviewer_name">Reviewer Name:</label>
-              <input type="text" id="reviewer_name" name="reviewer_name" value="<%=reviewData[0].reviewer_name %>">
+              <input type="text" id="reviewer_name" name="reviewer_name" required
+               value="<%=reviewData[0].reviewer_name %>">
               <br><br>
               <label for="review_text">Review Text:</label>
               <textarea type="text" maxlength="250" id="review_text" class="customText" 
-              rows="4" cols="50" name="review_text" value="<%=reviewData[0].review_text %>">
+              rows="4" cols="50" name="review_text" required
+               value="<%=reviewData[0].review_text %>">
               </textarea>
               <br><br>
             </fieldset>
