implement showing avg

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -28,6 +28,7 @@
         </div>
     </div>
     <div class="container-custom">
+        <p><%= prodReviewsAvg %></p>
         <% for (let iCount = 0; iCount < productReviews.length; iCount++){%>
         <div class="col mb-5">
             <p><%= productReviews[iCount].reviewer_name %></p>
