--- a/views/allReviews.ejs
+++ b/views/allReviews.ejs
@@ -24,8 +24,8 @@
                         <td><%=reviewData[iCount].product_id%></td>
                         <td>
                             <!-- You can add buttons or links for actions like editing or deleting the review -->
-                            <a href="edit/<%=reviewData[iCount].review_id%>" class="btn btn-primary">Edit</a>
-                            <a href="delete/<%=reviewData[iCount].review_id%>" class="btn btn-primary">Delete</a>
+                            <a href="edit/<%=reviewData[iCount].review_id%>" class="button">Edit</a>
+                            <a href="delete/<%=reviewData[iCount].review_id%>" class="button">Delete</a>
                         </td>
                     </tr>
                 <% } %>
