--- a/views/allReviews.ejs
+++ b/views/allReviews.ejs
@@ -26,11 +26,11 @@
                             <!-- Edit and delete -->
                             <form action="/edit/<%= reviewData[iCount].review_id %>" method="GET">
                                 <input type="hidden" name="reviewID" value="<%=reviewData[iCount].review_id%>">
-                                <button type="submit" class="btn btn-primary">Edit</button>
+                                <button type="submit" class="button">Edit</button>
                             </form>
                             <form action="/delete/<%= reviewData[iCount].review_id %>" method="POST">
                                 <input type="hidden" name="reviewID" value="<%=reviewData[iCount].review_id%>">
-                                <button type="submit" class="btn btn-primary">Delete</button>
+                                <button type="submit" class="button">Delete</button>
                             </form>
                         </td>
                     </tr>
