--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -5,7 +5,7 @@
     <h1 style="text-align: center;">
         Success
     </h1>
-    <p id="logged_in" style="display: none;"><%= reviewData[0].logged_in %></p>
+    <p id="logged_in" style="display: none;"><%= logged_in %></p>
 <script>
     // Wait for 1000 milliseconds (1 second) before redirecting
     setTimeout(function() {
@@ -14,7 +14,7 @@
 
     function getData()
     {
-        localStorage.setItem('loggedIn', document.getElementById("logged_in").innerHTML)
+        localStorage.setItem('loggedIn', document.getElementById("logged_in").textContent)
     }
 
 </script>
