--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -10,7 +10,7 @@
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
         <script>
-            function getDate()
+            function pageSetup()
             {
                 let sYear = new Date().getFullYear();
                 document.getElementById("copyright").innerHTML = "Copyright &copy; A Little Bit of Grandma " + sYear + "."
