--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -1,4 +1,4 @@
-<body onload="getDate();">
+<body onload="pageSetup();">
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
