--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -12,6 +12,7 @@
         <script>
             function pageSetup()
             {
+                //Get the year
                 let sYear = new Date().getFullYear();
                 document.getElementById("copyright").innerHTML = "Copyright &copy; A Little Bit of Grandma " + sYear + "."
             }
